Create a system for logging errors and warnings Logging and handling errors and warnings are implemented in the 'log' function, which is called from the LOG_ERROR and LOG_WARNING macros. Macros are used to get the file name and line number from which the corresponding error/warning was called.

--- a/EphProject/EphProject.vcxproj
+++ b/EphProject/EphProject.vcxproj
@@ -164,7 +164,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="adds\GLAD\src\glad.c" />
+    <ClCompile Include="src\core\Log.cpp" />
     <ClCompile Include="src\main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\core\Log.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
