Create vertex and fragment shaders Simple shaders, the result of which is painting a 2d plane with red.

--- a/EphProject/EphProject.vcxproj.filters
+++ b/EphProject/EphProject.vcxproj.filters
@@ -42,4 +42,8 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="src\core\shaders\default_vertex.shader" />
+    <None Include="src\core\shaders\default_fragment.shader" />
+  </ItemGroup>
 </Project>
