--- a/EphProject/EphProject.vcxproj
+++ b/EphProject/EphProject.vcxproj
@@ -174,6 +174,10 @@
     <ClInclude Include="src\core\Log.hpp" />
     <ClInclude Include="src\core\Shader.hpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="src\core\shaders\default_fragment.shader" />
+    <None Include="src\core\shaders\default_vertex.shader" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
