Create 'Image' class This class loads the image into a byte array, stores the image size and color depth.

--- a/EphProject/EphProject.vcxproj.filters
+++ b/EphProject/EphProject.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="src\core\Shader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\core\Image.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\core\Log.hpp">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\core\Shader.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\core\Image.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
