--- a/EphProject/EphProject.vcxproj
+++ b/EphProject/EphProject.vcxproj
@@ -179,6 +179,8 @@
   <ItemGroup>
     <None Include="src\core\shaders\default_fragment.shader" />
     <None Include="src\core\shaders\default_vertex.shader" />
+    <None Include="src\core\shaders\txd_array_fragment.shader" />
+    <None Include="src\core\shaders\txd_array_vertex.shader" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
