Create 'Texture2dArray' class This class implements the logic for creating and binding arrays of 2d textures.

--- a/EphProject/EphProject.vcxproj
+++ b/EphProject/EphProject.vcxproj
@@ -168,6 +168,7 @@
     <ClCompile Include="src\core\Image.cpp" />
     <ClCompile Include="src\core\Log.cpp" />
     <ClCompile Include="src\core\Shader.cpp" />
+    <ClCompile Include="src\core\Texture2dArray.cpp" />
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -175,6 +176,7 @@
     <ClInclude Include="src\core\Image.hpp" />
     <ClInclude Include="src\core\Log.hpp" />
     <ClInclude Include="src\core\Shader.hpp" />
+    <ClInclude Include="src\core\Texture2dArray.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="src\core\shaders\default_fragment.shader" />
