--- a/EphProject/EphProject.vcxproj.filters
+++ b/EphProject/EphProject.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="src\core\Texture2dArray.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\core\Texture2dArrayLayer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\core\Log.hpp">
@@ -51,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\core\Texture2dArray.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\core\Texture2dArrayLayer.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
