--- a/EphProject/EphProject.vcxproj
+++ b/EphProject/EphProject.vcxproj
@@ -170,6 +170,7 @@
     <ClCompile Include="src\core\Shader.cpp" />
     <ClCompile Include="src\core\Texture2dArray.cpp" />
     <ClCompile Include="src\core\Texture2dArrayLayer.cpp" />
+    <ClCompile Include="src\core\VertexArray.cpp" />
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -179,6 +180,7 @@
     <ClInclude Include="src\core\Shader.hpp" />
     <ClInclude Include="src\core\Texture2dArray.hpp" />
     <ClInclude Include="src\core\Texture2dArrayLayer.hpp" />
+    <ClInclude Include="src\core\VertexArray.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="src\core\shaders\default_fragment.shader" />
