Create 'IndicesData' class This class is implemented to store data about contents of the OpenGL buffer 'GL_ELEMENT_ARRAY_BUFFER'. This data is needed to draw something using the 'glDrawElements' function. In fact, an object of this class stores arguments for the 'glDrawElements' function. This class only stores data. The presence of an object of this class does not guarantee that the indexes described in it actually exist in the GPU.

--- a/EphProject/EphProject.vcxproj
+++ b/EphProject/EphProject.vcxproj
@@ -165,6 +165,7 @@
   <ItemGroup>
     <ClCompile Include="adds\GLAD\src\glad.c" />
     <ClCompile Include="src\core\Core.cpp" />
+    <ClCompile Include="src\core\IndicesData.cpp" />
     <ClCompile Include="src\core\Image.cpp" />
     <ClCompile Include="src\core\Log.cpp" />
     <ClCompile Include="src\core\Shader.cpp" />
@@ -175,6 +176,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\core\Core.hpp" />
+    <ClInclude Include="src\core\IndicesData.hpp" />
     <ClInclude Include="src\core\Image.hpp" />
     <ClInclude Include="src\core\Log.hpp" />
     <ClInclude Include="src\core\Shader.hpp" />
