Create 'Sprite' class This class is implemented to store a minimum set of data required to render a sprite on the screen: texture layer data and  data about the vertices and texture vertices that make up the srpite.

--- a/EphProject/EphProject.vcxproj
+++ b/EphProject/EphProject.vcxproj
@@ -169,6 +169,7 @@
     <ClCompile Include="src\core\Image.cpp" />
     <ClCompile Include="src\core\Log.cpp" />
     <ClCompile Include="src\core\Shader.cpp" />
+    <ClCompile Include="src\core\Sprite.cpp" />
     <ClCompile Include="src\core\Texture2dArray.cpp" />
     <ClCompile Include="src\core\Texture2dArrayLayer.cpp" />
     <ClCompile Include="src\core\VertexArray.cpp" />
@@ -180,6 +181,7 @@
     <ClInclude Include="src\core\Image.hpp" />
     <ClInclude Include="src\core\Log.hpp" />
     <ClInclude Include="src\core\Shader.hpp" />
+    <ClInclude Include="src\core\Sprite.hpp" />
     <ClInclude Include="src\core\Texture2dArray.hpp" />
     <ClInclude Include="src\core\Texture2dArrayLayer.hpp" />
     <ClInclude Include="src\core\VertexArray.hpp" />
