Create 'Renderer' class, use it to render sprites and interact with shaders
The 'Renderer' class implements the rendering logic and interaction with shaders. At this stage, the class has implemented:
 - Constructor. Initializes the fields of the class. Generates a projection matrix based on the size of the scene. Sends it to the shader program as a uniform variable.
 - Function'draw_sprite'. This function sets some presets for rendering a sprite (binds the texture 2d array, sets the texture unit and layer number), and then renders the sprite using the indexes. In fact, setting presets is a CPU->GPU transfer that is time consuming. For optimization, the last used values (which are already in the GPU) are stored in static variables. Data is sent to the GPU only if the new values are not equal to the previous ones.

Important changes in 'Core::start_main_loop':
- Removed the logic of creating a projection matrix and sending it to the shader program (this is now implemented in the constructor of the 'Renderer' class).
- Removed all interactions withs shader uniforms. This is now implemented through the methods of the 'Renderer' class.
- From the objects already created in the 'Core::start_main_loop' function: 'indices_data_1', 'indices_data_2', 'layer_0' and 'layer_1', two objects of the 'Sprite' class are created.
- Before the start of the render loop, an object of the 'Renderer' class is created. To draw sprites in the render loop, the 'Renderer::draw_sprite' function is called.

--- a/EphProject/EphProject.vcxproj
+++ b/EphProject/EphProject.vcxproj
@@ -168,6 +168,7 @@
     <ClCompile Include="src\core\IndicesData.cpp" />
     <ClCompile Include="src\core\Image.cpp" />
     <ClCompile Include="src\core\Log.cpp" />
+    <ClCompile Include="src\core\Renderer.cpp" />
     <ClCompile Include="src\core\Shader.cpp" />
     <ClCompile Include="src\core\Sprite.cpp" />
     <ClCompile Include="src\core\Texture2dArray.cpp" />
@@ -180,6 +181,7 @@
     <ClInclude Include="src\core\IndicesData.hpp" />
     <ClInclude Include="src\core\Image.hpp" />
     <ClInclude Include="src\core\Log.hpp" />
+    <ClInclude Include="src\core\Renderer.hpp" />
     <ClInclude Include="src\core\Shader.hpp" />
     <ClInclude Include="src\core\Sprite.hpp" />
     <ClInclude Include="src\core\Texture2dArray.hpp" />
